# jenkins-plugins-resolver

./: .bazelrc  .gitignore  .goreleaser.yml  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
.github/workflows/: bazel.yml  continuous-deployment.yml  continuous-integration.yml
api/: BUILD.bazel  api.go  pluginsapi.pb.go  pluginsapi.proto  sort.go
cmd/jpdownloader/: BUILD.bazel  main.go
cmd/jpresolver/: BUILD.bazel  main.go
docker/jpdownloader/: BUILD.bazel
docker/jpresolver/: BUILD.bazel
docs/: jpdownloader.md  jpresolver.md  lock-file.md  project-file.md
pkg/crypto/: BUILD.bazel  crypto.go  crypto_test.go
pkg/plugins/common/: BUILD.bazel  incompatibilities.go  store.go  store_test.go
pkg/plugins/downloader/common/: BUILD.bazel  downloader.go
pkg/plugins/downloader/httpdownloader/: BUILD.bazel  downloader.go
pkg/plugins/downloader/jenkinsdownloader/: BUILD.bazel  downloader.go
pkg/plugins/downloader/testdownloader/: BUILD.bazel  downloader.go
pkg/plugins/graph/: BUILD.bazel  graph.go  incompatibilities.go  incompatibilities_test.go  locker.go  locker_test.go  store.go  store_test.go
pkg/plugins/jar/: BUILD.bazel  extractor.go  extractor_test.go
pkg/plugins/jar/testdata/: foo.jpi
pkg/plugins/jpi/: BUILD.bazel  downloader.go  downloader_test.go  extractor.go  extractor_test.go  parser.go  parser_test.go  store.go  store_test.go
pkg/plugins/jpi/testdata/jpis/: credentials-2.2.0.jpi  structs-1.7.jpi
pkg/plugins/meta/: BUILD.bazel  meta.go  meta_test.go  store.go  store_test.go
pkg/plugins/requesters/: BUILD.bazel  requesters.go
pkg/plugins/war/: BUILD.bazel  extractor.go  incompatibilities.go  parser.go  parser_test.go  store.go  war.go
pkg/plugins/war/testdata/: jenkins.foo.war
pkg/utils/: BUILD.bazel  utils.go  utils_test.go
pkg/utils/testdata/: unmarshal.json  unmarshal.jsonnet  unmarshal.yml
pkg/utils/testdata/example/: BUILD.bazel  test.go  test.pb.go  test.proto
pkg/zip/: BUILD.bazel  zip.go  zip_test.go
scripts/: go-vendor
tools/: bazel-docker-push-latest.sh  bazel-docker-push.sh  bazel-run.sh  mkstamp.sh  publish.sh
