# gazelle:prefix github.com/bitnami-labs/jenkins-plugins-resolver
# gazelle:proto disable_global

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    external = "vendored",
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load(
    "@tagged_docker_push//:defaults.bzl",
    tagged_docker_push = "docker_push",
)

go_image(
    name = "jpresolver_image",
    base = "@go_debug_image_base//image",
    embed = ["//cmd/jpresolver:go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

gcr_repository_jpresolver = "bitnami-labs/jenkins-plugins-resolver"

tagged_docker_push(
    name = "push_jpresolver_image",
    image = ":jpresolver_image",
    repository = gcr_repository_jpresolver,
)

tagged_docker_push(
    name = "push_jpresolver_image_latest",
    image = ":jpresolver_image",
    repository = gcr_repository_jpresolver,
    tag = "latest",
)

go_image(
    name = "jpdownloader_image",
    base = "@go_debug_image_base//image",
    embed = ["//cmd/jpdownloader:go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

gcr_repository_jpdownloader = "bitnami-labs/jenkins-plugins-downloader"

tagged_docker_push(
    name = "push_jpdownloader_image",
    image = ":jpdownloader_image",
    repository = gcr_repository_jpdownloader,
)

tagged_docker_push(
    name = "push_jpdownloader_image_latest",
    image = ":jpdownloader_image",
    repository = gcr_repository_jpdownloader,
    tag = "latest",
)
