load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "pluginsapi.pb.go",
        "sort.go",
    ],
    importpath = "github.com/bitnami-labs/jenkins-plugins-resolver/api",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/plugins/requesters:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
    ],
)
