load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["crypto.go"],
    importpath = "github.com/bitnami-labs/jenkins-plugins-resolver/pkg/crypto",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/juju/errors:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["crypto_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
)
