load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["utils.go"],
    importpath = "github.com/bitnami-labs/jenkins-plugins-resolver/pkg/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/golang/protobuf/jsonpb:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/google/go-jsonnet:go_default_library",
        "//vendor/github.com/hashicorp/go-version:go_default_library",
        "//vendor/github.com/juju/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["utils_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/utils/testdata/example:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
    ],
)
