load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["zip.go"],
    importpath = "github.com/bitnami-labs/jenkins-plugins-resolver/pkg/zip",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/juju/errors:go_default_library"],
)
