load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["zip.go"],
    importpath = "github.com/bitnami-labs/jenkins-plugins-resolver/pkg/zip",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/juju/errors:go_default_library",
        "//vendor/github.com/mkmik/multierror:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["zip_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
)
