load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "graph.go",
        "incompatibilities.go",
        "locker.go",
        "store.go",
    ],
    importpath = "github.com/bitnami-labs/jenkins-plugins-resolver/pkg/plugins/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//pkg/crypto:go_default_library",
        "//pkg/plugins/common:go_default_library",
        "//pkg/plugins/downloader/common:go_default_library",
        "//pkg/plugins/meta:go_default_library",
        "//pkg/utils:go_default_library",
        "//vendor/github.com/juju/errors:go_default_library",
        "//vendor/github.com/mkmik/multierror:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "incompatibilities_test.go",
        "locker_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//api:go_default_library",
        "//vendor/github.com/golang/protobuf/jsonpb:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
    ],
)
