load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "meta.go",
        "store.go",
    ],
    importpath = "github.com/bitnami-labs/jenkins-plugins-resolver/pkg/plugins/meta",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//pkg/plugins/downloader/common:go_default_library",
        "//pkg/plugins/jar:go_default_library",
        "//pkg/plugins/jpi:go_default_library",
        "//pkg/utils:go_default_library",
        "//vendor/github.com/juju/errors:go_default_library",
        "//vendor/github.com/mkmik/multierror:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["meta_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//api:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
    ],
)
