load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "extractor.go",
        "incompatibilities.go",
        "parser.go",
        "store.go",
        "war.go",
    ],
    importpath = "github.com/bitnami-labs/jenkins-plugins-resolver/pkg/plugins/war",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//pkg/plugins/common:go_default_library",
        "//pkg/plugins/jar:go_default_library",
        "//pkg/plugins/jpi:go_default_library",
        "//pkg/utils:go_default_library",
        "//pkg/zip:go_default_library",
        "//vendor/github.com/juju/errors:go_default_library",
        "//vendor/github.com/mkmik/multierror:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["parser_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//api:go_default_library",
        "//pkg/plugins/jar:go_default_library",
        "//vendor/github.com/golang/protobuf/jsonpb:go_default_library",
    ],
)
