load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["downloader.go"],
    importpath = "github.com/bitnami-labs/jenkins-plugins-resolver/pkg/plugins/downloader/httpdownloader",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/juju/errors:go_default_library"],
)
