load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "test.go",
        "test.pb.go",
    ],
    importpath = "github.com/bitnami-labs/jenkins-plugins-resolver/pkg/utils/testdata/example",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/golang/protobuf/proto:go_default_library"],
)
